--- a/videos.html
+++ b/videos.html
@@ -1,130 +1,224 @@
+<!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta charset="utf-8" />
+    <title>InglesAI-videos</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta content="" name="description" />
+    <meta content="" name="author" />
+    <link rel="stylesheet" type="text/css" href="assets/plugins/owl-carousel/owl.carousel.css" />
+    <link rel="stylesheet" type="text/css" href="assets/plugins/owl-carousel/owl.theme.css" />
+    <link rel="stylesheet" type="text/css" href="assets/plugins/headereffects/css/component.css">
+    <link rel="stylesheet" type="text/css" href="assets/plugins/headereffects/css/normalize.css" />
+    <link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css"
+        media="screen" />
+    <!-- BEGIN CORE CSS FRAMEWORK -->
+    <link href="assets/plugins/boostrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/plugins/boostrapv3/css/bootstrap-theme.min.css" rel="stylesheet"
+        type="text/css" />
+    <link href="assets/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet"
+        type="text/css" />
+    <!-- END CORE CSS FRAMEWORK -->
+    <!-- BEGIN CSS TEMPLATE -->
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/magic_space.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
+    <!-- END CSS TEMPLATE -->
+    <!--nueva baina-->
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico">
-    <title>Responsive Video Gallery</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="videos.css">
-    <script type="text/javascript" src="videos.js"></script>
-    <!--[if lt IE 9]>
-    <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
+<link rel="stylesheet" type="text/css" href="videos.css" />
 
-  <body>
 
-    <section class="second clearfix">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico">s
+<link rel="stylesheet" href="css/main.css">
+<link href='https://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'>
+<!--[if lt IE 9]>
+<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 
-      <header>
-        <h1>The Video Gallery</h1>
-      </header>
+</head>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/zH3ZohGnjcg"><img class="videoThumb" src="http://i1.ytimg.com/vi/zH3ZohGnjcg/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Kumru Ballad</h2>
-      </article>
+<!-- END HEAD -->
+<body>
+    <div class="main-wrapper">
+        <div role="navigation" class="navbar navbar-default navbar-static-top">
+            <div class="container">
+                <div class="compressed">
+                    <div class="navbar-header">
+                        <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle"
+                            type="button">
+                            <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span
+                                class="icon-bar"></span><span class="icon-bar"></span>
+                        </button>
+                        <a href="#" class="navbar-brand compressed">
+                            <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
+                                data-src-retina="assets/img/logo2x.png" width="119" height="22" /></a>
+                    </div>
+                    <div class="navbar-collapse collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="index.html">Indice</a></li>
+                            <li><a href="publicaciones.html">Publicaciones</a></li>
+														<li><a href="videos.html">Videos<a/></li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </div>
+                    <!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+        <div class="section first white">
+                            <div class="section grey p-t-20  p-b-20 m-b-50">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h2>
+                                    Videos</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+            					<!-- Hidden video div -->
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//player.vimeo.com/video/26890275"><img class="videoThumb" src="https://secure-b.vimeocdn.com/ts/178/010/178010767_295.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Kumru Orchestral</h2>
-      </article>
+                    <div class="grid-row reverse video-gallery">
+ <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
+ <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
+ <input type="radio" value="3" name="video-list" id="video-3" /><label for="video-3">Capitulo 3</label>
+ <input type="radio" value="4" name="video-list" id="video-4" /><label for="video-4">Capitulo 4</label>
+ <input type="radio" value="5" name="video-list" id="video-5" /><label for="video-5">Capitulo 5</label>
+ <input type="radio" value="6" name="video-list" id="video-6" /><label for="video-6">Capitulo 6</label>
+ <input type="radio" value="7" name="video-list" id="video-7" /><label for="video-7">Capitulo 7</label>
+ <input type="radio" value="8" name="video-list" id="video-8" /><label for="video-8">Capitulo 8</label>
+ <input type="radio" value="9" name="video-list" id="video-9" /><label for="video-9">Capitulo 9</label>
+ <input type="radio" value="10" name="video-list" id="video-10" /><label for="video-10">Capitulo 10</label>
+ <!-- videos -->
+ <div class="video video-1">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/iRaQ4G9xEqw" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/paG__3FBLzI"><img class="videoThumb" src="http://i1.ytimg.com/vi/paG__3FBLzI/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Mesopotamia</h2>
-      </article>
+ <div class="video video-2">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9zKNolqsRUw" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/OF9fneQ50Us"><img class="videoThumb" src="http://i1.ytimg.com/vi/OF9fneQ50Us/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Kreutzer</h2>
-      </article>
+ <div class="video video-3">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/3I-EMFzp9AY" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/1swsXJuclGM"><img class="videoThumb" src="http://i1.ytimg.com/vi/1swsXJuclGM/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Bodrum</h2>
-      </article>
+ <div class="video video-4">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/f9eKUdWRDeE" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/WQ3Gf9PLUO8"><img class="videoThumb" src="http://i1.ytimg.com/vi/WQ3Gf9PLUO8/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Mesopotamia</h2>
-      </article>
+ <div class="video video-5">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/UNjfoBkXqHw" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//player.vimeo.com/video/7533229"><img class="videoThumb" src="https://secure-b.vimeocdn.com/ts/326/392/32639200_295.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Symhpony in Red</h2>
-      </article>
+ <div class="video video-6">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/QUQhdge2VRg" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/bYy1yKqspYs"><img class="videoThumb" src="http://i1.ytimg.com/vi/bYy1yKqspYs/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Paganini Jazz</h2>
-      </article>
+ <div class="video video-7">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/qicU-vCLw_w" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/02bxAzWn0JM"><img class="videoThumb" src="http://i1.ytimg.com/vi/02bxAzWn0JM/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Piano Concerto No.3</h2>
-      </article>
+ <div class="video video-8">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/1Hee6OyZemk" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/uj158c_4e0M"><img class="videoThumb" src="http://i1.ytimg.com/vi/uj158c_4e0M/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Rhapsody in Blue</h2>
-      </article>
+ <div class="video video-9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-9ORfcFvjMc" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/kIxech_-msA"><img class="videoThumb" src="http://i1.ytimg.com/vi/kIxech_-msA/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Concerto G-Dur</h2>
-      </article>
+ <div class="video video-10">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/LhblTmnGeIk" frameborder="0" allowfullscreen></iframe>
+ </div>
+ <!-- videos -->
+</div>
 
-      <article class="video">
-        <figure>
-        <a class="fancybox fancybox.iframe" href="//www.youtube.com/embed/_ZSefvtdYiY"><img class="videoThumb" src="http://i1.ytimg.com/vi/_ZSefvtdYiY/mqdefault.jpg"></a>
-        </figure>
-        <h2 class="videoTitle">Paganini Variations</h2>
-      </article>
+                    <!-- videos -->
 
-    </section>
+        <div class="section grey">
+            <div class="container">
+                <div class="p-t-60 p-b-50">
 
-    <section class="third">
-      <header>
-        <h1>First write the HTML</h1>
-      </header>
+                </div>
+            </div>
+        </div>
+        <div class="section black contact-details green-icons">
+            <div class="container">
+                <div class="row">
 
-    </section>
+                    <div class="col-md-3 text-center">
+                        <div class="services-box-3">
+                            <i class="fa fa-envelope"></i>
+                            <div class="content">
+                                <p>
+                                    E-mail</p>
+                                <h3>
+                                    InglesAI26@gmail.com</h3>
+                            </div>
+                        </div>
+                    </div>
 
-  </body>
+                </div>
+            </div>
+        </div>
+        <div class="section white footer">
+            <div class="container">
+                <div class="p-t-30 p-b-50">
+                    <div class="row">
+                        <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
+                            <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
+                                data-src-retina="assets/img/logo2x.png" width="119" height="22" />
 
-  <footer>
-    <p>Simple Responsive Video Gallery by <a href="https://codepen.io/fask153" target="_blank">hassn youssef</a><p>
-    <p>Use it • Change it • Make something cool with it</p>
-  </footer>
+                        </div>
+                        <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/global.min.js"></script>
+                            <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
+
+                                <a href="javascript:">InglesAI26@gmail.com</a>
+                            </div>
+                            <div class="clearfix">
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
+                            <div class="bold">
+                                FOLLOW US</div>
+                            <br />
+                            <a href="javascript:"><i class="fa fa-facebook fa-2x"></i></a>&nbsp; <a href="javascript:">
+                                <i class="fa fa-twitter fa-2x"></i></a>&nbsp; <a href="javascript:"><i class="fa fa-youtube-play  fa-2x">
+                                </i></a>&nbsp; <a href="javascript:"><i class="fa fa-github fa-2x"></i></a>&nbsp;
+                            <a href="javascript:"><i class="fa fa-dribbble fa-2x"></i></a>&nbsp; <a href="javascript:">
+                                <i class="fa fa-pinterest fa-2x"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- BEGIN CORE JS FRAMEWORK -->
+    <script type="text/javascript" src="assets/plugins/jquery-1.8.3.min.js"></script>
+    <script src="assets/plugins/boostrapv3/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- END CORE JS FRAMEWORK -->
+    <!-- BEGIN JS PLUGIN -->
+    <script src="assets/plugins/pace/pace.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/jquery-unveil/jquery.unveil.min.js" type="text/javascript"></script>
+    <script src="assets/plugins/modernizr.custom.js" type="text/javascript"></script>
+    <script src="assets/plugins/waypoints.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="assets/plugins/jquery-nicescroll/jquery.nicescroll.min.js"></script>
+    <script type="text/javascript" src="assets/plugins/jquery-isotope/jquery.isotope.js"></script>
+    <!-- END JS PLUGIN -->
+    <script type="text/javascript" src="assets/js/core.js"></script>
+
+</body>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/global.min.js"></script>
+
 
 </html>
