--- a/video.html
+++ b/video.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <meta charset="utf-8" />
-    <title>InglesAI-Publicaciones</title>
+    <title>InglesAI-videos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta content="" name="description" />
     <meta content="" name="author" />
@@ -25,10 +25,24 @@
     <link href="assets/css/magic_space.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/animate.min.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" style="text/css" href="videos.css">
-
     <!-- END CSS TEMPLATE -->
+    <!--nueva baina-->
+
+<link rel="stylesheet" type="text/css" href="videos.css" />
+
+
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="shortcut icon" href="favicon.ico">s
+<link rel="stylesheet" href="css/main.css">
+
+<!--[if lt IE 9]>
+<script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+
 </head>
+
 <!-- END HEAD -->
 <body>
     <div class="main-wrapper">
@@ -49,7 +63,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Indice</a></li>
                             <li><a href="publicaciones.html">Publicaciones</a></li>
-                            <li><a href="videos.html">Videos<a/></li>
+														<li><a href="videos.html">Videos<a/></li>
                             <li><a href="contacto.html">Contacto</a></li>
                         </ul>
                     </div>
@@ -58,8 +72,7 @@
             </div>
         </div>
         <div class="section first white">
-            <div class=" p-b-60">
-                <div class="section grey p-t-20  p-b-20 m-b-50">
+                            <div class="section grey p-t-20  p-b-20 m-b-50">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
@@ -68,91 +81,78 @@
                             </div>
                         </div>
                     </div>
-                    <div class="clearfix">
-                    </div>
                 </div>
-                <div class="container">
-                    <div class="portfolio-grid portfolioContainer ">
-                        <ul id="thumbs" class="col3">
-                          <div class="clearfix">
-                          </div>
-                      </li>
+        </div>
+            					<!-- Hidden video div -->
 
+                    <div class="grid-row reverse video-gallery">
+ <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
+ <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
+ <input type="radio" value="3" name="video-list" id="video-3" /><label for="video-3">Capitulo 3</label>
+ <input type="radio" value="4" name="video-list" id="video-4" /><label for="video-4">Capitulo 4</label>
+ <input type="radio" value="5" name="video-list" id="video-5" /><label for="video-5">Capitulo 5</label>
+ <input type="radio" value="6" name="video-list" id="video-6" /><label for="video-6">Capitulo 6</label>
+ <input type="radio" value="7" name="video-list" id="video-7" /><label for="video-7">Capitulo 7</label>
+ <input type="radio" value="8" name="video-list" id="video-8" /><label for="video-8">Capitulo 8</label>
+ <input type="radio" value="9" name="video-list" id="video-9" /><label for="video-9">Capitulo 9</label>
+ <input type="radio" value="10" name="video-list" id="video-10" /><label for="video-10">Capitulo 10</label>
 
+ <!-- videos -->
+ <div class="video video-1">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/iRaQ4G9xEqw" frameborder="0" allowfullscreen></iframe>
+ </div>
 
+ <div class="video video-2">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/9zKNolqsRUw" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                      <section>
-                                          <div class="grid-row reverse video-gallery">
-                       <input type="radio" value="1" name="video-list" id="video-1" checked="checked" /><label for="video-1">Capitulo 1</label>
-                       <input type="radio" value="2" name="video-list" id="video-2" /><label for="video-2">Capitulo 2</label>
-                       <input type="radio" value="3" name="video-list" id="video-3" /><label for="video-3">Capitulo 3</label>
-                       <input type="radio" value="4" name="video-list" id="video-4" /><label for="video-4">Capitulo 4</label>
-                       <input type="radio" value="5" name="video-list" id="video-5" /><label for="video-5">Capitulo 5</label>
-                       <input type="radio" value="6" name="video-list" id="video-6" /><label for="video-6">Capitulo 6</label>
-                       <input type="radio" value="7" name="video-list" id="video-7" /><label for="video-7">Capitulo 7</label>
-                       <input type="radio" value="8" name="video-list" id="video-8" /><label for="video-8">Capitulo 8</label>
-                       <input type="radio" value="9" name="video-list" id="video-9" /><label for="video-9">Capitulo 9</label>
-                       <input type="radio" value="10" name="video-list" id="video-10" /><label for="video-10">Capitulo 10</label>
-                       <!-- videos -->
-                       <div class="video video-1">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/iRaQ4G9xEqw" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-3">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/3I-EMFzp9AY" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-2">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/9zKNolqsRUw" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-4">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/f9eKUdWRDeE" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-3">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/3I-EMFzp9AY" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-5">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/UNjfoBkXqHw" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-4">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/f9eKUdWRDeE" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-6">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/QUQhdge2VRg" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-5">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/UNjfoBkXqHw" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-7">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/qicU-vCLw_w" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-6">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/QUQhdge2VRg" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-8">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/1Hee6OyZemk" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-7">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qicU-vCLw_w" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-9">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-9ORfcFvjMc" frameborder="0" allowfullscreen></iframe>
+ </div>
 
-                       <div class="video video-8">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/1Hee6OyZemk" frameborder="0" allowfullscreen></iframe>
-                       </div>
+ <div class="video video-10">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/LhblTmnGeIk" frameborder="0" allowfullscreen></iframe>
+ </div>
+ <!-- videos -->
+</div>
 
-                       <div class="video video-9">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/-9ORfcFvjMc" frameborder="0" allowfullscreen></iframe>
-                       </div>
+                    <!-- videos -->
 
-                       <div class="video video-10">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/LhblTmnGeIk" frameborder="0" allowfullscreen></iframe>
-                       </div>
+        <div class="section grey">
+            <div class="container">
+                <div class="p-t-60 p-b-50">
 
-                       <!-- videos -->
-                      </div>
-                      </section>
-
-
+                </div>
+            </div>
+        </div>
         <div class="section black contact-details green-icons">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-phone"></i>
-                            <div class="content">
-                                <p>
-                                    Phone</p>
-                                <h3>
-                                    +1 555 666 9999</h3>
-                            </div>
-                        </div>
-                    </div>
+
                     <div class="col-md-3 text-center">
                         <div class="services-box-3">
                             <i class="fa fa-envelope"></i>
@@ -160,32 +160,11 @@
                                 <p>
                                     E-mail</p>
                                 <h3>
-                                    letstalk@thempleite.com</h3>
+                                    InglesAI26@gmail.com</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-map-marker "></i>
-                            <div class="content">
-                                <p>
-                                    Postal</p>
-                                <h3>
-                                    32-Grey Suite, NY</h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <div class="services-box-3">
-                            <i class="fa fa-pinterest-square"></i>
-                            <div class="content">
-                                <p>
-                                    Pinterest</p>
-                                <h3>
-                                    pinterest.com/frittt</h3>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -196,30 +175,16 @@
                         <div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 xs-m-b-20">
                             <img src="assets/img/logo_condensed.png" alt="" data-src="assets/img/logo_condensed.png"
                                 data-src-retina="assets/img/logo2x.png" width="119" height="22" />
-                            <br />
-                            <br />
-                            © Frittt Templates.
-                            <br />
-                            All Rights Reserved.
+
                         </div>
                         <div class="col-md-4 col-lg-3 col-sm-4  col-xs-12 xs-m-b-20">
-                            <address class="xs-no-padding  col-md-6 col-lg-6 col-sm-6  col-xs-12">
-                                32 - Grey Suite<br>
-                                Odd Street,<br>
-                                NY, USA.
-                            </address>
+
                             <div class="xs-no-padding col-md-6 col-lg-6 col-sm-6">
-                                <div>
-                                    (1) 555 666 9999</div>
-                                <a href="javascript:">letstalk@thempleite.com</a>
+
+                                <a href="javascript:">InglesAI26@gmail.com</a>
                             </div>
                             <div class="clearfix">
                             </div>
-                        </div>
-                        <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 xs-m-b-20">
-                            <div class="bold">
-                                We Are Hiring</div>
-                            Send you resume at <a href="javascript:">careers@thempleite.com</a>
                         </div>
                         <div class="col-md-2 col-lg-2 col-sm-2  col-xs-12 ">
                             <div class="bold">
@@ -249,5 +214,12 @@
     <script type="text/javascript" src="assets/plugins/jquery-isotope/jquery.isotope.js"></script>
     <!-- END JS PLUGIN -->
     <script type="text/javascript" src="assets/js/core.js"></script>
+
 </body>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/global.min.js"></script>
+
+
 </html>
